# FrontTESTE

./: README.md
TechProductsManager/: CMakeLists.txt
TechProductsManager/resources/: style.qss
TechProductsManager/src/: ChartWidget.cpp  ChartWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  Product.cpp  Product.h  ProductsManager.cpp  ProductsManager.h  RegionFilterDialog.cpp  RegionFilterDialog.h  ReportDialog.cpp  ReportDialog.h  main.cpp
TechProductsManager/src/utils/: FileUtils.cpp  FileUtils.h  Style.h
